--- a/package.json
+++ b/package.json
@@ -1,69 +1,91 @@
 {
-   "name": "powr",
-   "version": "0.0.1",
-   "description": "powr framework",
-   "repository": {
-      "type": "git",
-      "url": "https://github.com/cryogon/powr.git"
-   },
-   "main": "app.js",
-   "dependencies": {
-      "JSONStream": "^1.0.6",
-      "async-eventemitter": "^0.2.2",
-      "axios": "^0.7.0",
-      "babel-core": "~5.8.33",
-      "body-parser": "^1.13.2",
-      "cloudinary": "^1.2.2",
-      "compression": "^1.5.2",
-      "connect-multiparty": "^2.0.0",
-      "connect-sequelize": "^2.0.0",
-      "cookie-parser": "^1.3.5",
-      "deep-diff": "^0.3.3",
-      "deep-extend": "^0.4.0",
-      "diff": "^2.2.0",
-      "event-stream": "^3.3.2",
-      "express": "^4.13.3",
-      "express-recaptcha": "^2.0.0",
-      "express-session": "^1.11.3",
-      "history": "^1.17.0",
-      "js-beautify": "^1.5.10",
-      "jsonwebtoken": "^5.0.4",
-      "lodash": "^3.10.0",
-      "lodash.groupby": "^3.1.1",
-      "lodash.sortby": "^3.1.5",
-      "mkdirp": "^0.5.1",
-      "moment": "^2.10.6",
-      "multiparty": "^4.1.2",
-      "node-mailjet": "^1.0.3",
-      "object-assign": "^4.0.1",
-      "passport": "^0.3.2",
-      "passport-local": "^1.0.0",
-      "passport-local-sequelize": "^0.6.0",
-      "pg": "^4.4.0",
-      "pg-hstore": "^2.3.2",
-      "pretty-error": "^1.1.2",
-      "quantize": "^1.0.1",
-      "react-addons-css-transition-group": "^0.14.2",
-      "react-dnd": "^2.0.2",
-      "react-dnd-html5-backend": "^2.0.0",
-      "react-document-meta": "^2.0.0",
-      "react-dom": "^0.14.2",
-      "react-redux": "^4.0.0",
-      "react-router": "^2.0.0-rc4",
-      "redux": "^3.0.0",
-      "redux-simple-router": "^1.0.2",
-      "request": "^2.63.0",
-      "response-time": "^2.3.1",
-      "sequelize": "^3.8.0",
-      "serve-favicon": "^2.3.0",
-      "shortid": "^2.2.2"
-   },
-   "peerDependencies":{
-      "react": "^0.14.3",
-      "powr-utils": "^0.0.1"
-   },
-   "author": {
-      "name": "Benjamin Kniffler",
-      "email": "benjamin@kniffler.com"
-   }
+  "name": "powr",
+  "version": "0.0.6",
+  "description": "powr framework",
+  "scripts": {
+    "test": "mocha",
+    "compile": "gulp babel",
+    "prepublish": "npm run compile"
+  },
+  "repositoryx": {
+    "type": "git",
+    "url": "https://github.com/cryogon/powr.git"
+  },
+  "main": "index.js",
+  "dependencies": {
+    "JSONStream": "^1.0.6",
+    "async-eventemitter": "^0.2.2",
+    "axios": "^0.7.0",
+    "babel-core": "~5.8.33",
+    "body-parser": "^1.13.2",
+    "cloudinary": "^1.2.2",
+    "compression": "^1.5.2",
+    "connect-multiparty": "^2.0.0",
+    "connect-sequelize": "^2.0.0",
+    "cookie-parser": "^1.3.5",
+    "deep-diff": "^0.3.3",
+    "deep-extend": "^0.4.0",
+    "diff": "^2.2.0",
+    "event-stream": "^3.3.2",
+    "express": "^4.13.3",
+    "express-recaptcha": "^2.0.0",
+    "express-session": "^1.11.3",
+    "history": "^1.17.0",
+    "js-beautify": "^1.5.10",
+    "jsonwebtoken": "^5.0.4",
+    "lodash": "^3.10.0",
+    "lodash.groupby": "^3.1.1",
+    "lodash.sortby": "^3.1.5",
+    "mkdirp": "^0.5.1",
+    "moment": "^2.10.6",
+    "multiparty": "^4.1.2",
+    "node-mailjet": "^1.0.3",
+    "object-assign": "^4.0.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-sequelize": "^0.6.0",
+    "pg": "^4.4.0",
+    "pg-hstore": "^2.3.2",
+    "pretty-error": "^1.1.2",
+    "quantize": "^1.0.1",
+    "react-addons-css-transition-group": "^0.14.5",
+    "react-dnd": "^2.0.2",
+    "react-dnd-html5-backend": "^2.0.0",
+    "react-document-meta": "^2.0.0",
+    "react-dom": "^0.14.5",
+    "react-redux": "^4.0.0",
+    "react-router": "^2.0.0-rc4",
+    "redux": "^3.0.0",
+    "redux-simple-router": "^1.0.2",
+    "request": "^2.63.0",
+    "response-time": "^2.3.1",
+    "sequelize": "^3.8.0",
+    "serve-favicon": "^2.3.0",
+    "shortid": "^2.2.2"
+  },
+  "devDependencies": {
+    "chai": "^3.4.1",
+    "del": "^2.2.0",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.1",
+    "mocha": "^2.3.4",
+    "sqlite3": "^3.1.1",
+    "supertest": "^1.1.0",
+    "zombie": "^4.2.1"
+  },
+  "peerDependencies": {
+    "react": "^0.14.5",
+    "powr-utils": "^0.0.1"
+  },
+  "author": {
+    "name": "Benjamin Kniffler",
+    "email": "benjamin@kniffler.com"
+  },
+  "readme": "## powr\nWork in progress\n",
+  "readmeFilename": "README.md",
+  "gitHead": "ec0a1fcdc3d1adca6bdd99ab3b4f6b5d6ac2dfe5",
+  "_id": "powr@0.0.5",
+  "_shasum": "f4752e8035fbb359071aa2df6d689593ce8fec84",
+  "_from": "powr@>=0.0.5 <0.0.6",
+  "_resolved": "file:powr"
 }
