--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@ build/Release
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
 .idea
-.travis.yaml
+.travis.yml
 _coverage_
 
 node_modules
