--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "chai": "^3.4.1",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.1",
+    "gulp-babel": "6.1.1",
     "mocha": "^2.3.4",
     "sqlite3": "^3.1.1",
     "supertest": "^1.1.0",
