--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "JSONStream": "^1.0.6",
     "async-eventemitter": "^0.2.2",
     "axios": "^0.7.0",
-    "babel-core": "~5.8.33",
+    "babel-core": "5.8.33",
     "body-parser": "^1.13.2",
     "cloudinary": "^1.2.2",
     "compression": "^1.5.2",
@@ -67,7 +67,7 @@
     "chai": "^3.4.1",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
-    "gulp-babel": "6.1.1",
+    "gulp-babel": "5.3.0",
     "mocha": "^2.3.4",
     "sqlite3": "^3.1.1",
     "supertest": "^1.1.0",
