--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "powr framework",
   "scripts": {
     "test": "mocha",
+    "coverage": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- -R spec ./test/*",
     "compile": "gulp babel",
     "prepublish": "npm run compile"
   },
