--- a/package.json
+++ b/package.json
@@ -66,9 +66,11 @@
   },
   "devDependencies": {
     "chai": "^3.4.1",
+    "coveralls": "^2.11.6",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-babel": "5.3.0",
+    "istanbul": "^0.4.1",
     "mocha": "^2.3.4",
     "sqlite3": "^3.1.1",
     "supertest": "^1.1.0",
